Add author information to index.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -69,6 +69,7 @@
             <p><strong>Technology:</strong> Spring Boot + Java 17</p>
             <p><strong>Template Engine:</strong> Thymeleaf</p>
             <p><strong>Deployment:</strong> Docker Container</p>
+            <p><strong>Author:</strong> Sergiu Speian</p>
         </div>
         
         <div class="nav">
